:bug: [fix] styles issues related to popover component on ios

--- a/src/styles/radix-ui.css
+++ b/src/styles/radix-ui.css
@@ -294,6 +294,10 @@
 
 /* POPOVER */
 
+.radix-popover-trigger[type="button"] {
+	-webkit-appearance: none;
+}
+
 .radix-popover-content {
 	animation-duration: 400ms;
 	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
